...
            }
        })
        
        swiftPagesView.delegate = self
        swiftPagesView.setTopBarBackground(UIColor.clearColor())
        swiftPagesView.setAnimatedBarColor(UIColor.hex("#2ea75f", alpha: 1.0))
        swiftPagesView.initializeWithVCsInstanciatedArrayAndButtonTitlesArray(VCsInstanciated, buttonTitlesArray: ["Info","Photos"])
    }
    
    override func viewWillAppear(animated: Bool) {
        super.viewWillAppear(animated)
        do {
            reachability = try Reachability.reachabilityForInternetConnection()
...
