...
            <point key="canvasLocation" x="985" y="183"/>
        </scene>
        <!--New-->
        <scene sceneID="gjV-e3-GDi">
            <objects>
                <navigationController storyboardIdentifier="PhotoNavigation" automaticallyAdjustsScrollViewInsets="NO" id="Plm-nH-4wI" customClass="PhotoNavigationViewController" customModule="PlantInfo" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="New" image="photo-camera" id="Pmn-dT-lb5"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UL2-q9-BfP">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="0.18039215689999999" green="0.65490196079999996" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                    </navigationBar>
...
